--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <h1>Temperature Converter</h1>
         <subtitle>Created using HTML, JavaScript, Bootstrap & CSS.</subtitle>
 
-        <div id="celsius">
+        <div id="Celsius">
           <input type="number" class="form-control form-control-lg form-padding" id="input-celsius" placeholder="celsius">
 
         </div>
 
-        <div id="fahrenheit">
+        <div id="Fahrenheit">
           <input type="number" class="form-control form-control-lg form-padding" id="input-fahrenheit" placeholder="fahrenheit">
 
         </div>
 
-        <div id="kelvin">
+        <div id="Kelvin">
           <input type="number" class="form-control form-control-lg form-padding" id="input-kelvin" placeholder="kelvin">
 
         </div>
@@ -38,10 +38,9 @@
 
     </div>
     <footer>
-          <p>By Elle J.</p>
-          <p><a href="https://github.com/itsellej" target="_blank"><img class="icons" src="github icon.png" alt="Github icon"></a>
-            <a href="https://codepen.io/itsellej/" target="_blank"><img class="icons" src="Codepen Icon.png" alt="Codepen icon"></a></p>
-          <p><em>Credit - icons from <a href="https://pngtree.com/">pngtree</a></em></p>
+          <p>By Shadow Bloeme</p>
+          <p><a href="https://github.com/shadowbloeme" target="_blank"><img class="icons" src="github icon.png" alt="Github icon"></a>
+            <a href="https://codepen.io/shadowbloeme/" target="_blank"><img class="icons" src="Codepen Icon.png" alt="Codepen icon"></a></p>
         </footer>
 
   </div>
