--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-md-6 text-center">
+        <a href="https://shadowbtech.com"><img src="sbt-logo.png" class="sbt-logo"/></a>
         <h1>Temperature Converter</h1>
         <subtitle>Created using HTML, JavaScript, Bootstrap & CSS.</subtitle>
 
