--- a/index.html
+++ b/index.html
@@ -16,21 +16,20 @@
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-md-6 text-center">
-        <a href="https://shadowbtech.com"><img src="sbt-logo.png" class="sbt-logo"/></a>
         <h1>Temperature Converter</h1>
         <subtitle>Created using HTML, JavaScript, Bootstrap & CSS.</subtitle>
 
-        <div id="Celsius">
+        <div id="celsius">
           <input type="number" class="form-control form-control-lg form-padding" id="input-celsius" placeholder="celsius">
 
         </div>
 
-        <div id="Fahrenheit">
+        <div id="fahrenheit">
           <input type="number" class="form-control form-control-lg form-padding" id="input-fahrenheit" placeholder="fahrenheit">
 
         </div>
 
-        <div id="Kelvin">
+        <div id="kelvin">
           <input type="number" class="form-control form-control-lg form-padding" id="input-kelvin" placeholder="kelvin">
 
         </div>
@@ -40,9 +39,11 @@
     </div>
     <footer>
           <p>By Shadow Bloeme</p>
-          <p><a href="https://github.com/shadowbloeme" target="_blank"><img class="icons" src="github icon.png" alt="Github icon"></a>
+          <p><a href="https://github.com/shadowbloeme/" target="_blank"><img class="icons" src="github icon.png" alt="Github icon"></a>
             <a href="https://codepen.io/shadowbloeme/" target="_blank"><img class="icons" src="Codepen Icon.png" alt="Codepen icon"></a></p>
-        </footer>
+          <p><a href="https://shadowbtech.com/" target="_blank"><img src="sbt-logo.png" class="sbt-logo"/></a></p>
+          
+          </footer>
 
   </div>
 
